<resources>

    <string name="profile_title">Профиль</string>
    <string name="profile_personal_data">Личные данные</string>
    <string name="profile_favorites">Избранное</string>
    <string name="profile_orders">Заказы</string>
    <string name="profile_pharmacies">Мои аптеки</string>
    <string name="profile_bonus_program">Бонусная программа</string>
    <string name="profile_comments_reviews">Комментарии и отзывы</string>
    <string name="profile_setting_notifications">Настройка уведомлений</string>
    <string name="profile_product_notifications">Уведомления о товарах</string>

    <string name="profile_notifications_title">Уведомления о товарах</string>

    <string name="pharmacies_title">Мои аптеки</string>
    <string name="pharmacies_not_found_title">Вы пока ничего не добавили</string>
    <string name="pharmacies_not_found_desc">Нажмите ❤️ на аптеке, которую хотите сохранить</string>

    <string name="comments_reviews_title">Комментарии и отзывы</string>
    <string name="comments_read_completely">Читать полностью</string>
    <string name="comments_hide">Скрыть</string>
    <string name="comments_responses_comments">Ответы на комментарии (%s)</string>
    <string name="comments_product_reviews_page">Отзывы о товаре</string>
    <string name="comments_reviews_online_pharmacy_page">Отзывы об интернет-аптеке</string>
    <string name="comments_feedback_page">Обратная связь</string>
    <string name="comments_feedback_no_feedbacks">К сожалению, вы еще не оставляли комментарии либо отзывы</string>


    <string name="seting_notifications_title">Настройка уведомлений</string>
    <string name="setting_notifications_online_order_status">Статус интернет-заказа</string>
    <string name="setting_notifications_stocks">Акции, новости, низкие цены, промокоды и подарки</string>
    <string name="setting_notifications_points">Сгорание баллов:</string>
    <string name="setting_notifications_mail">Получать уведомления на e-mail</string>
    <string name="setting_notifications_sms">Получать СМС-уведомления</string>
    <string name="setting_notifications_push">Push-уведомления</string>

    <string name="personal_data">Личные данные</string>
    <string name="personal_data_not_specified">Не указан</string>
    <string name="personal_data_fio">ФИО</string>
    <string name="personal_data_date">Дата рождения</string>
    <string name="personal_data_phone">Телефон</string>
    <string name="personal_data_email">Электронная почта</string>
    <string name="personal_data_sex">Пол</string>
    <string name="personal_data_mail_not_ferified">Почта не верифицирована</string>
    <string name="personal_data_profile_management">Управление профилем</string>
    <string name="personal_data_mail_e_receipt_title">Получать электронный чек вместо бумажного на e-mail</string>
    <string name="personal_data_mail_e_receipt_desc">при оплате на кассе в аптеке, на сайте, в мобильном приложении</string>
    <string name="personal_data_date_dialog_info_title">Получайте бонусные баллы на день рождения!</string>
    <string name="personal_data_date_dialog_info_desc">Дату рождения, которую Вы указали, нельзя изменить.\nРедактировать или изменить данные Вы сможете, обратившись в службу технической поддержки.</string>
    <string name="personal_data_mail_question_1">Электронный чек является аналогом бумажного чека и имеет ряд преимуществ:\n- не нужно ждать, когда напечатается чек;\n- всегда под рукой;\n- нельзя потерять;\n- уменьшает количество отходов.\n\nДавая согласие, вы будете получать все чеки на электронную почту. Для этого заполните и подтвердите вашу электронную почту.</string>
    <string name="personal_data_mail_question_2">Подтвердите e-mail для получения электронных чеков</string>

    <string name="personal_data_fio_title">Изменить ФИО</string>

    <string name="personal_data_phone_title">Изменить номер</string>
    <string name="personal_data_phone_receive_code">Получить смс</string>
    <string name="personal_data_phone_receive_code_desc">Введите последние 4 цифры номера, который вам сейчас позвонит.\nВведите его ниже:</string>
    <string name="personal_data_sex_title">Изменить пол</string>
    <string name="personal_data_sex_male">Мужской</string>
    <string name="personal_data_sex_female">Женский</string>

    <string name="personal_data_mail_title">Изменить почту</string>
    <string name="personal_data_mail_invalid_format">Не верный формат почты</string>
    <string name="personal_data_mail_receive_code">Отправить код</string>
    <string name="personal_data_mail_receive_code_desc">Введите код, отправленный на указанную электронную почту\nВведите его ниже:</string>

    <string name="profile_management_title">Управление профилем</string>
    <string name="profile_management_logout">Выйти из профиля</string>
    <string name="profile_management_remove">Удалить профиль</string>
    <string name="profile_management_remove_desc">Если вы хотите удалить все ваши данные из мобильного приложения и сайта нажмите кнопку ниже</string>
    <string name="profile_management_remove_dialog_title">Удаление аккаунта</string>
    <string name="profile_management_remove_dialog_desc">Вы действительно хотите удалить ваш аккаунт? Все ваши данные будут удалены без возможности восстановления.</string>
    <string name="profile_management_remove_dialog_loyalty_desc">При удалении аккаунта, Вы можете оставить возможность пользоваться программой лояльности в офлайн-аптеках</string>
    <string name="profile_management_remove_dialog_loyalty">Не удалять меня из программы лояльности</string>
    <string name="profile_management_remove_dialog_err_title">Удаление профиля недоступно</string>
    <string name="profile_management_remove_dialog_err_desc">Пока есть активные заказы, удалить профиль не получится.\nПопробуйте сначала получить заказ или отменить его.</string>


    <string name="profile_remove_title">Удаление аккаунта</string>
    <string name="profile_remove_question">Почему вы решили удалить ваш аккаунт?</string>
    <string name="profile_remove_question_desc">Пожалуйста, поделитесь с нами причиной, почему вы решили удалить свой аккаунт.</string>
    <string name="profile_remove_choice_1">Не пользуюсь сервисом</string>
    <string name="profile_remove_choice_2">Высокие цены</string>
    <string name="profile_remove_choice_3">Приходит много рекламы</string>
    <string name="profile_remove_choice_4">Не нравится качество сервиса</string>
    <string name="profile_remove_choice_5">Другое</string>
    <string name="profile_remove_choice_own_reason">Укажите свою причину</string>
    <string name="profile_remove_success">Ваш запрос на удаление учетной записи успешно обработан!\nМы надеемся, что ваш опыт работы с нашей платформой был положительным и будем рады видеть вас снова!</string>

</resources>